--- a/_news/22-07-06.md
+++ b/_news/22-07-06.md
@@ -4,4 +4,4 @@ date: 2022-09-01
 inline: true
 ---
 
-Joined <a href="https://www.cl.uzh.ch/de/people/team/compling/klenner.html" target="_blank">Manfred Klenner</a>'s group as a research assistant.
+Joined <a href="https://www.cl.uzh.ch/de/people/team/compling/klenner.html" target="_blank">Manfred Klenner</a>'s <a href="https://www.cl.uzh.ch/en/texttechnologies/research/opinionmining/sentiment-inference.html" target="_blank">Stancer</a> project as a research assistant.
