--- a/_news/23-04-26.md
+++ b/_news/23-04-26.md
@@ -4,4 +4,4 @@ date: 2023-04-26
 inline: true
 ---
 
-Paper accepted for presentation at 15th International Conference on Computational Semantics (IWCS) 2023.
+Poster accepted for presentation at <em>15th International Conference on Computational Semantics (IWCS 2023)</em>.
