--- a/_news/23-07-31.md
+++ b/_news/23-07-31.md
@@ -4,4 +4,4 @@ date: 2023-07-31
 inline: true
 ---
 
-Received my M.A. in Digital Linguistics</em>.
+Received my M.A. in Digital Linguistics from the University of Zurich.
